--- a/Colors/index.html
+++ b/Colors/index.html
@@ -237,7 +237,7 @@
       <div class="save-popup">
         <button class="close-save">X</button>
         <h4>Give a Name to your Palette!</h4>
-        <input type="text" max-lenght="35" class="save-name" />
+        <input type="text" max-length="35" class="save-name" />
         <button type="submit" class="submit-save">Save</button>
       </div>
     </div>
